--- a/package.json
+++ b/package.json
@@ -1,32 +1,38 @@
 {
-  "name": "ionic2-material-icons",
-  "version": "1.0.3",
-  "description": "Material Icons for Ionic 2 Apps",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
-  "files": [
-    "dist",
-    "fonts"
-  ],
-  "scripts": {
-    "build": "rm -rf dist aot && ngc && cp src/*.scss dist"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/zyra/ionic2-material-icons.git"
-  },
-  "author": "Ibby Hadeed <ibby@zyra.ca>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/zyra/ionic2-material-icons/issues"
-  },
-  "homepage": "https://github.com/zyra/ionic2-material-icons#readme",
-  "devDependencies": {
-    "@angular/compiler": "^4.0.0",
-    "@angular/compiler-cli": "^4.0.0",
-    "@angular/core": "^4.0.0",
-    "rxjs": "^5.1.1",
-    "typescript": "^2.2.2",
-    "zone.js": "^0.8.4"
-  }
+	"name": "ionic2-material-icons",
+	"version": "1.0.4",
+	"description": "Material Icons for Ionic 2 Apps",
+	"main": "dist/index.js",
+	"typings": "dist/index.d.ts",
+	"files": [
+		"dist",
+		"fonts"
+	],
+	"scripts": {
+		"build": "rm -rf dist aot && ngc && cp src/*.scss dist"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/zyra/ionic2-material-icons.git"
+	},
+	"author": "Ibby Hadeed <ibby@zyra.ca>",
+	"contributors": [{
+		"name": "Fabio Tea",
+		"email": "f4bio@protonmail.com",
+		"url": "http://iam.f4b.io"
+	}],
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/zyra/ionic2-material-icons/issues"
+	},
+	"homepage": "https://github.com/zyra/ionic2-material-icons#readme",
+	"devDependencies": {
+		"@angular/compiler": "4.1.3",
+		"@angular/compiler-cli": "4.1.3",
+		"@angular/core": "4.1.3",
+		"rxjs": "5.4.0",
+		"typescript": "2.3.3",
+		"zone.js": "0.8.11",
+		"material-design-icons": "3.0.1"
+	}
 }
