--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
 	"main": "dist/index.js",
 	"typings": "dist/index.d.ts",
 	"files": [
-		"dist",
-		"fonts"
+		"src/**",
+		"LICENSE",
+    "README.md",
+		"tsconfig.json"
 	],
 	"scripts": {
-		"postinstall": "rm -rf dist aot && ngc && cp src/*.scss dist",
+		"postinstall": "npm run build",
 		"build": "rm -rf dist aot && ngc && cp src/*.scss dist"
 	},
 	"repository": {
