--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
 	"main": "dist/index.js",
 	"typings": "dist/index.d.ts",
 	"files": [
-		"src/**",
+		"dist/**",
 		"LICENSE",
     "README.md",
 		"tsconfig.json"
 	],
 	"scripts": {
-		"postinstall": "npm run build",
 		"build": "rm -rf dist aot && ngc && cp src/*.scss dist"
 	},
 	"repository": {
@@ -30,9 +29,9 @@
 	},
 	"homepage": "https://github.com/zyra/ionic2-material-icons#readme",
 	"devDependencies": {
+		"@angular/core": "4.1.3",
 		"@angular/compiler": "4.1.3",
 		"@angular/compiler-cli": "4.1.3",
-		"@angular/core": "4.1.3",
 		"rxjs": "5.4.0",
 		"typescript": "2.3.3",
 		"zone.js": "0.8.11",
