--- a/package.json
+++ b/package.json
@@ -1,40 +1,42 @@
 {
-	"name": "ionic2-material-icons",
-	"version": "1.0.4",
-	"description": "Material Icons for Ionic 2 Apps",
-	"main": "dist/index.js",
-	"typings": "dist/index.d.ts",
-	"files": [
-		"dist/**",
-		"LICENSE",
+  "name": "ionic2-material-icons",
+  "version": "1.0.4",
+  "description": "Material Icons for Ionic 2 Apps",
+  "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
+  "files": [
+    "dist/**",
+    "LICENSE",
     "README.md",
-		"tsconfig.json"
-	],
-	"scripts": {
-		"build": "rm -rf dist aot && ngc && cp src/*.scss dist"
-	},
-	"repository": {
-		"type": "git",
-		"url": "git+https://github.com/zyra/ionic2-material-icons.git"
-	},
-	"author": "Ibby Hadeed <ibby@zyra.ca>",
-	"contributors": [{
-		"name": "Fabio Tea",
-		"email": "f4bio@protonmail.com",
-		"url": "http://iam.f4b.io"
-	}],
-	"license": "MIT",
-	"bugs": {
-		"url": "https://github.com/zyra/ionic2-material-icons/issues"
-	},
-	"homepage": "https://github.com/zyra/ionic2-material-icons#readme",
-	"devDependencies": {
-		"@angular/core": "4.1.3",
-		"@angular/compiler": "4.1.3",
-		"@angular/compiler-cli": "4.1.3",
-		"rxjs": "5.4.0",
-		"typescript": "2.3.3",
-		"zone.js": "0.8.11",
-		"material-design-icons": "3.0.1"
-	}
+    "tsconfig.json"
+  ],
+  "scripts": {
+    "build": "rm -rf dist aot && ngc && cp src/*.scss dist"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/zyra/ionic2-material-icons.git"
+  },
+  "author": "Ibby Hadeed <ibby@zyra.ca>",
+  "contributors": [
+    {
+      "name": "Fabio Tea",
+      "email": "f4bio@protonmail.com",
+      "url": "http://iam.f4b.io"
+    }
+  ],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/zyra/ionic2-material-icons/issues"
+  },
+  "homepage": "https://github.com/zyra/ionic2-material-icons#readme",
+  "devDependencies": {
+    "@angular/compiler": "4.1.3",
+    "@angular/compiler-cli": "4.1.3",
+    "@angular/core": "4.1.3",
+    "material-design-icons": "^3.0.1",
+    "rxjs": "5.4.0",
+    "typescript": "2.3.3",
+    "zone.js": "0.8.11"
+  }
 }
