--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ionic2-material-icons",
+  "name": "ionic-material-icons",
   "version": "1.0.4",
   "description": "Material Icons for Ionic 2 Apps",
   "main": "dist/index.js",
